--- a/components/Header/SideNav.module.scss
+++ b/components/Header/SideNav.module.scss
@@ -12,6 +12,7 @@
     width 0.2s;
   opacity: 0;
   width: 0;
+  cursor: auto;
 
   @media screen and (width >= 992px) {
     display: none;
